oxidite-macros/tests/ui/fail_bad_model_attr.stderr
error: unsupported model attribute; expected `table_name = "..."` or `table = "..."`
 --> tests/ui/fail_bad_model_attr.rs:2:9
  |
2 | #[model(foo = "bar")]
  |         ^^^
