oxidite-macros/tests/ui/fail_bad_model_attr.rs
#[derive(oxidite_macros::Model)]
#[model(foo = "bar")]
struct Bad {
    id: i64,
}

fn main() {}
